--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "ATD Dimension Calculator",
   "short_name": "ATD Calc",
-  "start_url": "./index.html",
+  "description": "3-Pulley Modified ATD Dimension Calculator for OHE TRD",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#1e293b",
